# mipt_homeworks_2026

./: .flake8  pyproject.toml
.github/workflows/: ci.yml
Part_3_Types_Conditions_Loops_Functions/: hw3.py
part3_types_conditions_loops_functions/: hw3.py
part4_oop/: hw45.py
part5_decorators/: hw67.py
