[project]
name = "mipt-homeworks-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN",
    "COM812",
    "ISC001",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
lint = [
    "mypy>=1.19.1",
    "pyrefly>=0.49.0",
    "ruff>=0.14.13",
    "ty>=0.0.13",
    "wemake-python-styleguide>=1.5.0",
]
test = [
    "polyfactory>=3.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-randomly>=4.0.1",
    "pytest-timeout>=2.4.0",
]
